# Lead-Scoring-Model

./: .gitignore  .pre-commit-config.yaml  README.md  Temporal_funnel_analysis.py  funnel_analysis.py  main.py  pyproject.toml
lead_scoring/: registry.py
lead_scoring/analysis/: api.py  defaults.py  funnel_analysis.py  funnel_static.py  funnel_temporal.py  plots.py
lead_scoring/data/: cleaning.py  io.py  manipulations.py  schema.py  validation.py
lead_scoring/scoring_model/: config.py  evaluation.py  pipeline.py  preprocessing.py  training.py
lead_scoring/tests/: test_cleaning.py  test_pipeline.py  test_preprocessing.py  test_training.py  utils.py
notebooks/: Exploratory_analysis.py  Funnel_Analysis_2.py  Funnel_analysis.py  Static_Funnel_Analysis.py  Temporal_funnel_analysis.py
