[project]
name = "assignment-jet-hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "marimo>=0.23.1",
    "numpy>=2.4.4",
    "pandera>=0.31.0",
    "plotly>=6.7.0",
    "polars>=1.39.3",
]

[tool.setuptools]
packages = ["lead_scoring"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "openai>=2.31.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]
